--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
 streamlit
-PyPDF2
-python-docx
-Pillow
 google-generativeai
-google-genai
-google-ai-generativelanguage
-pydantic
-faiss-cpu
-docx2txt
-tqdm
 langchain
+langchain-core
 langchain-google-genai
 langchain-community
-langchain-core
+Pillow
+faiss-cpu
+pypdf
+docx2txt
+langchain-tavily
+wikipedia
+langchain-wikipedia
