--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-streamlit
-google-generativeai
-langchain
-langchain-core
-langchain-google-genai
-langchain-community
-Pillow
-faiss-cpu
-pypdf
-docx2txt
-langchain-tavily
-wikipedia
-langchain-wikipedia
+streamlit==1.35.0
+google-generativeai==0.5.4
+langchain==0.2.1
+langchain-core==0.2.3
+langchain-google-genai==1.0.6
+langchain-community==0.2.1
+Pillow==10.3.0
+chromadb==0.5.0
+pypdf==4.2.0
+docx2txt==0.8
+langchain-tavily==0.0.12
+wikipedia==1.4.0
